--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ DONE:
 + Map loading
 + Player
 + Map collision
++ Player Movement States
 
 
 TODO:
@@ -10,5 +11,4 @@ TODO:
 - Enemies
 - Damage
 - Day/Night transition
-- Player Movement States
 - Player Attacks
